--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>This is a single page application based on AngularJS framework and HTML5 IndexedDB. It manages a simple local database, to which users can add, remove, search and list in pages.</p>
+        <p>This is a single page application based on AngularJS framework and HTML5 IndexedDB. It manages a simple local database, with which users can add, remove, search and list records.</p>
 
 <p><strong>One tip</strong>: All the photos must be kept in photos/ directory. When you create a new slide, only images under that directory can be selected. After all, it's just a html app, isn't it?</p>
       </section>
