--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <section id="main_content" class="inner">
         <p>This is a single page application based on AngularJS framework and HTML5 IndexedDB. It manages a simple local database, with which users can add, remove, search and list records.</p>
 
-<p><strong>One tip</strong>: All the photos must be kept in photos/ directory. When you create a new slide, only images under that directory can be selected. After all, it's just a html app, isn't it?</p>
+<p><strong>One tip</strong>: All the photos must be kept in 'photos' directory. When you create a new slide, only images under that directory can be selected. After all, it's just a html app, isn't it?</p>
         <p>Here is a snapshot of my test:</p>
         <img src="http://ww2.sinaimg.cn/large/8063ac81jw1e9ixdrwkrbj20ye1ijama.jpg">
       </section>
